-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
b16
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8007179 | 8 | Christian Thalinger | P4 | Resolved | Fixed | b75 |
http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2012-December/009088.html
This change implements support for method deoptimization in Shark, and
thus (re-) enables an optimization for potentially inlining virtual
methods.
http://cr.openjdk.java.net/~rkennke/shark-deopt/webrev.01/
This optimization has been enabled before, a while ago, but has been
disabled because it leads to segmentation faults:
http://icedtea.classpath.org/bugzilla/show_bug.cgi?id=481
I used the testcase in the above bugreport (one of the jtreg tests in
jdk) to verify that the change does indeed deoptimize (and re-compile)
methods correctly. Besides that, no regressions could be found in
hotspot/test/compiler (and a bunch of other tests and programs I've been
running, including SpecJVM, Eclipse, etc).
Ok to go in?
Cheers,
Roman
This change implements support for method deoptimization in Shark, and
thus (re-) enables an optimization for potentially inlining virtual
methods.
http://cr.openjdk.java.net/~rkennke/shark-deopt/webrev.01/
This optimization has been enabled before, a while ago, but has been
disabled because it leads to segmentation faults:
http://icedtea.classpath.org/bugzilla/show_bug.cgi?id=481
I used the testcase in the above bugreport (one of the jtreg tests in
jdk) to verify that the change does indeed deoptimize (and re-compile)
methods correctly. Besides that, no regressions could be found in
hotspot/test/compiler (and a bunch of other tests and programs I've been
running, including SpecJVM, Eclipse, etc).
Ok to go in?
Cheers,
Roman
- backported by
-
JDK-8007179 Shark: implement deoptimization support
-
- Resolved
-