8005817: Shark: implement deoptimization support

Reviewed-by: twisti